CommentResponseDto 필드 수정